cambio en html y css main

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,27 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1><span>INSTAGRAM</span></h1>
-      <a class="button-log" href=""></a>
-    </div>
-  </header>
   <main>
-    <div class="container">
-      <div class="box-description">
+    <div class="box-content">
+      <h1><img src="images/brand.png" alt="INSTAGRAM" title="INSTAGRAM"></h1>
+      <a class="button-log" href="#" title="Log In"><span>Log In</span></a>
+      <div class="box-decription"> 
         <h2 class="title">Capture and Share the World's Moments</h2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
         <div class="buttons">
           <a href="#" title="Download on the App Store">Download on the App Store</a>
           <a href="#" title="Get it on Google Play">Get it on Google Play</a>
         </div>
-      </div>
-      <div class="box-phone">
-        <img src="images/phones.png" alt="Móvil" title="Móvil">
-      </div>
+      </div> 
+    </div>
+    <div class="box-phone">
+      <img src="images/phones.png" alt="Móvil" title="Móvil">
     </div>
   </main>
   <footer>
