Give style to log ing button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,7 @@
     
     <header class="title">
       <img src="images/brand.png">
-      <button><img src="images/home.png"> Log in</button>
+      <button><img src="images/home.png"><div>Log in</div></button>
       <div class="clear"></div>
     </header>
     
