--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,7 +28,7 @@
   <footer>
     <ul>
       <li><a href="#" title="About Us">About Us</a></li>
-      <li><a href="#" title="Support"><Support/a></li>
+      <li><a href="#" title="Support">Support</a></li>
       <li><a href="#" title="Blog">Blog</a></li>
       <li><a href="#" title="Press">Press</a></li>
       <li><a href="#" title="API">API</a></li>
