--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,21 +10,29 @@
   <body>
     <header>
       <div class="header">
-        <img src="./images/brand.png" alt="Logo Instagram">
-        <button class=""><img src="./images/home.png" alt="Logo Home">  Log in</button>
+        <div class="logo">
+        <img class= "logo" src="./images/brand.png" alt="Logo Instagram">
+        </div>
+        <button><img src="./images/home.png" alt="Logo Home">  Log in</button>
       </div>
     </header>
     <main>
-      <div>
+      <div class="phone">
         <img src="./images/phones.png" alt="Logo iphone">  
       </div>
-      <div>
+      <div class="logobox">
         <img src="./images/frame.png" alt="Logo fondo">
+      </div>
+      <div>
         <h2>Capture and Share the World's Moments</h2>
         <p>Instagram is a<strong> fast, beautiful </strong>and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
         <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      </div>
+      <div>
         <img src="./images/badge-android.png" alt="Get it on Google Play">
       </div>
     </main>
