Add style to button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,10 +16,11 @@
           <img src="./images/phones.png" alt="">
         </div>
         <div class="main-content">
-          <div class="brand">
-            <img src="./images/brand.png" alt="Instagram logo">
+          <div class="brand-info">
+            <img class="brand-img" src="./images/brand.png" alt="Instagram logo">
             <button class="login-btn"><img src="./images/home.png" alt="">Log in</button>
           </div>
+          <div class="clearfix"></div>
           <div class="info">
             <h2>Capture and Share the World's Moments</h2>
             <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
@@ -39,6 +40,7 @@
           </div>
         </div>
       </div>
+      <div class="clearfix"></div>
     </main>
     <footer>
       <div class="links">
