--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<head>
- 
-  <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+  <title>Instagram</title>
 </head>
+<nav>
+  <img src="images/brand.png" alt="brand">
+  <img src="images/home.png" alt="home">
+  <div class="clear-fix">
+    </div>
+</nav>
 <body>
-  
+  <main>
+    <section id="phone">
+<img src="images/phones.png" alt="phone">
+<div class="clear-fix">
+  </div>
 
-  Instagram
+</section>
 
+<article>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -22,7 +33,9 @@
 
   Download on the App Store
   Get it on Google Play
-
+</article>
+</main>
+<footer>
   About Us
   Support
   Blog
@@ -31,7 +44,10 @@
   Jobs
   Privacy
   Terms
-
+  
   &copy; 2014 Instagram
+
+</footer>
+
 </body>
 </html>
