Versión sin Flex

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="Nacho" content="Instagram Home page">
 </head>
 
 <body>
@@ -13,32 +15,42 @@
 
     <section class=centerbox>
       <div class="phones">
-        <img src="images/phones.png">
+        <img src="images/phones.png" alt="phones">
       </div>
 
       <div class=mainblock>
-        <img src="images/brand.png">
-        <img src="images/home.png">
+
+        <div class=logos>
+          <img src="images/brand.png" alt="Instagram-logo">
+          <button class="botón"> <img src="images/home.png" alt="home-button">Log In <a
+              href="https://instagram.com"></a> </button>
+        </div>
 
         <div class=secondblock>
 
-          <h1> Capture and Share the World's Moments</h1>
+          <h1> Capture and Share <br> the World's Moments</h1>
 
           <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
-
+            <br> <br>
             Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
             that
             easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+            <br> <br>
             Oh yeah, did we mention it's free?</p>
 
+
         </div>
-        <img src="images/badge-iphone.png"><img src="images/badge-android.png">
+        <div class=badges>
+          <img src="images/badge-iphone.png" alt="applestore-icon"><img src="images/badge-android.png"
+            alt="googleplay-icon">
+        </div>
       </div>
+
     </section>
   </main>
 
   <footer>
+
     About Us
     Support
     Blog
@@ -47,6 +59,7 @@
     Jobs
     Privacy
     Terms
+
     &copy; 2014 Instagram
   </footer>
 
