--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,16 +23,16 @@
       <div class="logobox">
         <img src="./images/frame.png" alt="Logo fondo">
       </div>
-      <div>
+      <div class="text">
         <h2>Capture and Share the World's Moments</h2>
         <p>Instagram is a<strong> fast, beautiful </strong>and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
-      <div>
+      <div class="apple">
         <img src="./images/badge-iphone.png" alt="Download on the App Store">
       </div>
-      <div>
+      <div class="google">
         <img src="./images/badge-android.png" alt="Get it on Google Play">
       </div>
     </main>
