footer finished and exercices

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,25 +21,26 @@
         </form>
         <div class="description">
             <div class="reduction"><h3>Capture and Share the World's Moments </h3></div>
-            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
             <p>Oh yeah, did we mention it's free?</p>
-            <div class="badge"><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone"></div>
-            <div class="badge"><img src="../starter-code/images/badge-android.png" alt="badge android"></div>
+            <div class="badge"><a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank"><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone"></a></div>
+            <div class="badge"><a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXBP9KAAEAAGEPWRSC6YVL6_GJRMF%26utm_content%3Dlo%26utm_medium%3Dbadge" target="_blank"><img src="../starter-code/images/badge-android.png" alt="badge android"></a></div>
         </div>
       </div>
+      <div class="clear"></div>
       <footer>
       <div class="footer">
-        About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <ul class="footer-ul">
+          <li class="footer-li"><a href="#">About us</a></li>
+          <li class="footer-li"><a href="#">Blog</a></li>
+          <li class="footer-li"><a href="#">Press</a></li>
+          <li class="footer-li"><a href="#">API</a></li>
+          <li class="footer-li"><a href="#">Jobs</a></li>
+          <li class="footer-li"><a href="#">Privacy</a></li>
+          <li class="footer-li"><a href="#">Terms</a></li>
+          <li class="footer-li2">&copy; 2014 Instagram</li>
+        </ul>
       </div>  
       </footer>  
 
