--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,22 +7,18 @@
     <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-<nav>
-  <img src="images/brand.png" alt="brand">
-  <img src="images/home.png" alt="home">
-  <div class="clear-fix">
-    </div>
-</nav>
+
 <body>
-  <main>
-    <section id="phone">
-<img src="images/phones.png" alt="phone">
-<div class="clear-fix">
+      <div class="blue-background">
+    <img class="phone-float" src="images/phones.png" alt="phone">
   </div>
-
-</section>
-
-<article>
+  <div>
+    <img class="phone-float" src="images/brand.png" alt="brand">
+    <img class="brand" src="images/home.png" alt="home"> 
+  </div>
+    <div class="clear-fix"></div>
+  
+  <article>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -34,7 +30,8 @@
   Download on the App Store
   Get it on Google Play
 </article>
-</main>
+
+
 <footer>
   About Us
   Support
@@ -44,10 +41,11 @@
   Jobs
   Privacy
   Terms
-  
+
   &copy; 2014 Instagram
 
 </footer>
 
 </body>
+
 </html>
