Adjusting positioning of description section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,18 +27,18 @@
         <img src="images/frame.png" alt="frame">
       </div>
       <div id="text" class="relative">
-      <div class="title">
+      <div id="title">
         <h2>Capture and Share the World's Moments</h2>
       </div>
-        <div class="paragraph">
+        <div id="paragraph">
           <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         </div>
-      </div>
-      <div class="download-links">
-        <img src="images/badge-iphone.png" alt="Download on the App Store">
-        <img src="images/badge-android.png" alt="Get it on Google Play">
+        <div id="download-links">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
       </div>
     </section>
     <footer>
