--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Document</title>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    Instagram
 
-  Capture and Share the World's Moments
+    Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+    the world.
 
-  Oh yeah, did we mention it's free?
+    Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    Download on the App Store
+    Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
 
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
 </body>
 </html>
