Some style in elements

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,57 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Instagram</title>
-</head>
-<body>
-  <header>
-    <div class="header-container">
-      <img class="logo-img" src="images/brand.png" alt="Instagram logo">
-      <div>
-        <img class="home-img" src="images/home.png" alt="Home icon">
-        <p>Log in</p>
-      </div>
-    </div>
-  </header>
-  <main>
-    <section>
-      <div>
-        <img class="phones-img" src="images/phones.png" alt="Phones with Instagram app">
-      </div>
-    </section>
-    <section>
-      <div>
-        <h2>Capture and <br>Share the World's Moments</h2>
-        <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-          </p>
-        <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-          </p>
-        <p>  Oh yeah, did we mention it's free?
-          </p>
-        <div>
-          <img class="store-img" src="images/badge-iphone.png" alt="Apple Store logo">
-          <img class="store-img" src="images/badge-android.png" alt="Android Store logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <img class="logo-img" src="images/brand.png" alt="Instagram logo" />
+        <div class="home-container beveled">
+          <img class="home-img" src="images/home.png" alt="Home icon" />
+          Log in
         </div>
       </div>
-    </section>
-  </main>
-  <footer>
-    <div>
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
-      </ul>
-    </div>
-  </footer>
-</body>
+    </header>
+    <main>
+      <section>
+        <div>
+          <img
+            class="phones-img"
+            src="images/phones.png"
+            alt="Phones with Instagram app"
+          />
+        </div>
+      </section>
+      <section>
+        <div class="info-container">
+          <h2>Capture and Share <br />the World's Moments</h2>
+          <div class="text-info-container">
+            <p>
+              Instagram is a <strong>fast</strong>, beautiful and fun way to
+              share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div>
+            <img
+              class="store-img"
+              src="images/badge-iphone.png"
+              alt="Apple Store logo"
+            />
+            <img
+              class="store-img"
+              src="images/badge-android.png"
+              alt="Android Store logo"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
