--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,8 +34,8 @@
         </section>
     
         <div id="images">
-          <img title="Download on the App Store" src="images/badge-iphone.png">
-          <img title="Get it on Google Play" src="images/badge-android.png">
+          <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank"><img title="Download on the App Store" src="images/badge-iphone.png"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target="_blank"><img title="Get it on Google Play" src="images/badge-android.png"></a>
         </div>
     
     </article>
