Refactor html structure to include semantic tags

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,17 +10,20 @@
   </head>
 
   <body>
-    <main>
+    <header>
       <div class="container">
         <div class="phone-img">
           <img src="./images/phones.png" alt="">
         </div>
+        <div class="brand-info main-content">
+          <img class="brand-img" src="./images/brand.png" alt="Instagram logo">
+          <button class="login-btn"><img src="./images/home.png" alt="">Log in</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
         <div class="main-content">
-          <div class="brand-info">
-            <img class="brand-img" src="./images/brand.png" alt="Instagram logo">
-            <button class="login-btn"><img src="./images/home.png" alt="">Log in</button>
-          </div>
-          <div class="clearfix"></div>
           <div class="info">
             <h2>Capture and Share the World's Moments</h2>
             <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
