--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,7 +37,8 @@
       </div>
     </main>
     <footer>
-        <ul>
+      <div class="footer">
+      <ul>
           <li>About Us</li>
           <li>Support</li>
           <li>Blog</li>
@@ -48,6 +49,7 @@
           <li>Terms</li>
           <li>&copy; 2014 Instagram</li>
         </ul>
+      </div>
     </footer>
   </body>
 </html>
