Adds html tags + class names

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,29 +11,62 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    Instagram
+    <!--MAIN::[START]-->
+    <main>
+        <div class="main-img-wrapper">
+            <img src="images/phones.png" alt="A pair of phones showing the app in use">
+        </div>
+        <div class="main-content-wrapper">
+            <div class="header">
+                <h1 class="header__main-logo">Instagram</h1>
+                <a class="header__log-in-btn" href="#">Log in</a>
+            </div>
+            <section class="page-description">
+                <h2 class="page-description__title">Capture and Share the World's Moments</h2>
 
-    Capture and Share the World's Moments
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
 
-    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                <a class="app_store_btn" href="#">Download on the App Store</a>
+                <a class="google_play_btn" href="#">Get it on Google Play</a>
+            </section>
+        </div>
+    </main>
+    <!--MAIN::[END]-->
 
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
-    the world.
-
-    Oh yeah, did we mention it's free?
-
-    Download on the App Store
-    Get it on Google Play
-
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
-
-    &copy; 2014 Instagram
+    <!--FOOTER::[START]-->
+    <footer>
+        <nav class="footer-nav">
+            <ul>
+                <li>
+                    <a href="">About Us</a>
+                </li>
+                <li>
+                    <a href="">Support</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+                <li>
+                    <a href="">Press</a>
+                </li>
+                <li>
+                    <a href="">API</a>
+                </li>
+                <li>
+                    <a href="">Jobs</a>
+                </li>
+                <li>
+                    <a href="">Privacy</a>
+                </li>
+                <li>
+                    <a href="">Terms</a>
+                </li>
+            </ul>
+        </nav>
+        <small class="copyright-print">&copy; 2014 Instagram</small>
+    </footer>
+    <!--FOOTER::[END]-->
 </body>
 </html>
