--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,6 +39,7 @@
     <footer>
       <div class="footer">
       <ul>
+          <strong>
           <li>About Us</li>
           <li>Support</li>
           <li>Blog</li>
@@ -47,6 +48,7 @@
           <li>Jobs</li>
           <li>Privacy</li>
           <li>Terms</li>
+          </strong>
           <li>&copy; 2014 Instagram</li>
         </ul>
       </div>
