Started styling footer section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -42,18 +42,20 @@
       </div>
     </section>
     <footer>
-      <div class="footer-links">
-        <a href="">About Us</a>
-        <a href="">Support</a>
-        <a href="">Blog</a>
-        <a href="">Press</a>
-        <a href="">API</a>
-        <a href="">Jobs</a>
-        <a href="">Privacy</a>
-        <a href="">Terms</a>
-      </div>
-      <div class="copyright">
-      &copy; 2014 Instagram
+      <div id="footer" class="relative">
+        <div id="footer-links" class="inline">
+          <a href="">About Us</a>
+          <a href="">Support</a>
+          <a href="">Blog</a>
+          <a href="">Press</a>
+          <a href="">API</a>
+          <a href="">Jobs</a>
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
+        </div>
+        <div id="copyright" class="inline">
+        &copy; 2014 Instagram
+        </div>
       </div>
     </footer>
   </main>
