--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,24 +13,26 @@
 <body>
     <!--MAIN::[START]-->
     <main>
-        <div class="main-img-wrapper">
-            <img src="images/phones.png" alt="A pair of phones showing the app in use">
-        </div>
-        <div class="main-content-wrapper">
-            <div class="header">
-                <h1 class="header__main-logo">Instagram</h1>
-                <a class="header__log-in-btn" href="#">Log in</a>
+        <div class="content-wrapper clearfix">
+            <div class="main-img-wrapper">
+                <img src="images/phones.png" alt="A pair of phones showing the app in use">
             </div>
-            <section class="page-description">
-                <h2 class="page-description__title">Capture and Share the World's Moments</h2>
+            <div class="main-content-wrapper">
+                <div class="header">
+                    <h1 class="header__main-logo">Instagram</h1>
+                    <a class="header__log-in-btn" href="#">Log in</a>
+                </div>
+                <section class="page-description">
+                    <h2 class="page-description__title">Capture and Share the World's Moments</h2>
 
-                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
-                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-                <p>Oh yeah, did we mention it's free?</p>
+                    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
 
-                <a class="app_store_btn" href="#">Download on the App Store</a>
-                <a class="google_play_btn" href="#">Get it on Google Play</a>
-            </section>
+                    <a class="app_store_btn" href="#">Download on the App Store</a>
+                    <a class="google_play_btn" href="#">Get it on Google Play</a>
+                </section>
+            </div>
         </div>
     </main>
     <!--MAIN::[END]-->
