--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,28 +9,26 @@
 </head>
 
 <body>
-      <div class="blue-background">
-    <img class="phone-float" src="images/phones.png" alt="phone">
+      <div>
+    <img class="phone" src="images/phones.png" alt="phone">
   </div>
   <div>
-    <img class="phone-float" src="images/brand.png" alt="brand">
-    <img class="brand" src="images/home.png" alt="home"> 
-  </div>
-    <div class="clear-fix"></div>
-  
-  <article>
-  Capture and Share the World's Moments
+    <img class="brand" src="images/brand.png" alt="brand">
+      <button class="button"><img src="images/home.png" alt="home">  Log in</button> 
+    </div>
+  <div class="text">
+  <p>
+  <h1>Capture and Share<br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-</article>
-
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+  <br>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+  <br>Oh yeah, did we mention it's free?
+</p>
+<img src="images/badge-iphone.png" alt="app-iphone">
+<img class="android" src="images/badge-android.png" alt="app-iphone">
+</div>
+<div class="clear-fix"></div>
 
 <footer>
   About Us
