--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,14 +31,16 @@
 <div class="clear-fix"></div>
 
 <footer>
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+ </ul>
 
   &copy; 2014 Instagram
 
