--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="background"></div>
   <main>
-    <div id="phones" class="absolute inline">
+    <div id="phones" class="absolute">
       <img src="images/phones.png" alt="phones showing Instragram app">
     </div>
     <div id="header" class="absolute inline">
@@ -22,14 +22,14 @@
         <div id="login-text" class="inline">Log in</div>
       </div>
     </div>
-    <section id="description" class="absolute inline">
-      <div id="frame" class="absolute inline">
+    <section id="description" class="relative">
+      <div id="frame" class="absolute">
         <img src="images/frame.png" alt="frame">
       </div>
       <div id="text" class="relative">
-      <div id="title">
-        <h2>Capture and Share the World's Moments</h2>
-      </div>
+        <div id="title">
+          <h2>Capture and Share the World's Moments</h2>
+        </div>
         <div id="paragraph">
           <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
