2º Cambios en CSS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,9 @@
   <main>
     <div id="blue-color"></div>
     <div id="grey-color">
-      <div id="left-section"></div>
+      <div id="left-section">
+        <img src="images/phones.png" alt="Phones Instagram app">
+      </div>
       <div id="right-section"> 
         <div class="logo-login"></div>
         <div class="description">
@@ -28,6 +30,7 @@
         </div>
       </div>
     </div>
+    <div class="clean"></div>
 
   </main>
   <footer>
