--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="section-1">
+  <section class="section-1 style-1">
     <div class="col-1">
       <img src="images/phones.png" alt="iphones">
     </div>
@@ -20,8 +20,8 @@
         <div class="clearfix"></div>
       </article>
       <article  class="section-2">
-        <h3>Capture and Share the World's Moments</h3>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
         <div class="badges">
