Login button style done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,11 +13,11 @@
     <div id="phones" class="absolute">
       <img src="images/phones.png" alt="phones showing Instragram app">
     </div>
-    <div id="header" class="absolute inline">
-      <div id="logo" class="inline">
+    <div id="header" class="absolute">
+      <div id="logo" class="relative inline">
         <img src="images/brand.png" alt="Instagram">
       </div>
-      <div id="login-button" class="inline">
+      <div id="login-button" class="absolute inline">
         <div id="house-icon" class="inline"><img src="images/home.png" alt="house icon"></div>
         <div id="login-text" class="inline">Log in</div>
       </div>
