html document idented

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,58 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset = "UTF-8">
-  <title>Instagram</title>
-  <link rel = "stylesheet" type = "text/css" href = "css/main.css">
-</head>
-<body>
-  <header>
-   <!---Instagram--->
-  <section>
-  <div><img src = "images/brand.png"></div>
-  <div><button type = "button"><img src = "images/home.png">&nbsp Log in</button></div>
-  </section>
-  <img src = "images/bgtile.png">
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
+  <body>
+    <header>
+      <!---Instagram--->
+      <section>
+        <div><img src="images/brand.png" /></div>
+        <div>
+          <button type="button">
+            <img src="images/home.png" />&nbsp Log in
+          </button>
+        </div>
+      </section>
+      <img src="images/bgtile.png" />
+    </header>
 
-  <section>
-      <img src = "images/phones.png">
-  </section>
+    <section>
+      <img src="images/phones.png" />
+    </section>
 
-  <section>
-    <div>
-  <h1>Capture and Share the World's Moments</h1>
-  </div>
-  <div>
-  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
-  
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+    <section>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+      </div>
+      <div>
+        <p>
+          Instagram is a <strong>fast, beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and
+          family.<br /><br />
 
-  Oh yeah, did we mention it's free?</p><br>
-  </div>
-  <!--Download on the App Store-->
-  <a href = "https://itunes.apple.com/es/app/instagram/id389801252?mt=8" target = "_blank"><img src = "images/badge-iphone.png"></a>
-  <!--Get it on Google Play-->
-  <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target = "_blank"><img src = "images/badge-android.png"></a>
-  
-  </section>
-  
-  <footer>
-    <div>
-    <ul>
-  <li><a href = "#">About Us</a></li>
-  <li><a href = "#">Support</a></li>
-  <li><a href = "#">Blog</a></li>
-  <li><a href = "#">Press</a></li>
-  <li><a href = "#">API</a></li>
-  <li><a href = "#">Jobs</a></li>
-  <li><a href = "#">Privacy</a></li>
-  <li><a href = "#">Terms</a></li>
-    </ul>
-    </div>
-    <div>
-  <p>&copy; 2014 Instagram</p><br><br>
-  </div>
-  </footer>
-</body>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.<br /><br />
+
+          Oh yeah, did we mention it's free?
+        </p>
+        <br />
+      </div>
+      <!--Download on the App Store-->
+      <a
+        href="https://itunes.apple.com/es/app/instagram/id389801252?mt=8"
+        target="_blank"
+        ><img src="images/badge-iphone.png"
+      /></a>
+      <!--Get it on Google Play-->
+      <a
+        href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"
+        target="_blank"
+        ><img src="images/badge-android.png"
+      /></a>
+    </section>
+
+    <footer>
+      <div>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>&copy; 2014 Instagram</p>
+        <br /><br />
+      </div>
+    </footer>
+  </body>
 </html>
