--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+<html lang="es">
+  <head>
+    <title>Instagram</title>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <header>
+      <img src="images/brand.png" alt="Instagram"/>
+      <a href="#" title="Log in">Log in</a>
+    </header>
+    <main>
+      <section>
+        <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.
+        </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+        <a href="#" title="Download on the App Store"><img src="images/badge-iphone.png" alt="Download on the App Store" width="164" height="51" /></a>
+        <a href="#" title="Get it on Google Play"><img src="images/badge-android.png" alt="Get it on Google Play" width="153" height="51" /></a>
+      </section>
+    </main>
+    <footer>
+      <a href="#" title="About Us">About Us</a>
+      <a href="#" title="Support">Support</a> 
+      <a href="#" title="Blog">Blog</a> 
+      <a href="#" title="Press">Press</a> 
+      <a href="#" title="API">API</a> 
+      <a href="#" title="Jobs">Jobs</a>
+      <a href="#" title="Privacy Terms">Privacy Terms</a> 
+      &copy; 2014 Instagram
+    </footer>
+  </body>
 </html>
