Cambios finales, listo para merge

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,49 +5,54 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="section-1 style-1">
-    <div class="col-1">
-      <img src="images/phones.png" alt="iphones">
+  <section class="section-1">
+    <div class="columna-1">
+      <img src="images/phones.png" alt="iphones" width="100%">
     </div>
-    <div class="col-1">
+    <div class="columna-2">
       <article class="section-2">
-        <div class="col-1">
-            <img src="images/brand.png" alt="Instagram">
+        <div class="col-1 brand-1">
+            <img src="images/brand.png" alt="Instagram" width="100%">
         </div>
-        <div class="col-1">
-            <button>Log in</button>
+        <div class="col-1 brand-2">
+            <div class="boton-login">
+              <img src="images/home.png" alt="Log In"> Log In
+            </div>
         </div>
         <div class="clearfix"></div>
       </article>
-      <article  class="section-2">
-        <h1>Capture and Share the World's Moments</h1>
+      <article  class="text-description">
+        <h1>Capture and Share</br>the World's Moments</h1>
         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
+      </br>
         <div class="badges">
-          <div class="col-1">
-            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <div class="col-1-badge">
+            <img src="images/badge-iphone.png" alt="Download on the App Store" width="100%">
           </div>
-          <div class="col-1">
-            <img src="images/badge-android.png" alt="Get it om GoogleP lay">
+          <div class="col-1-badge">
+            <img src="images/badge-android.png" alt="Get it om GoogleP lay" width="100%">
           </div>
         </div>
       </article>
     </div>
     <div class="clearfix"></div>  
   </section>
-  <footer class="section-1">
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">API</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
+  <footer class="footer">
+    <nav class="links-footer"> 
+        <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li>&copy; 2014 Instagram</li>
+          </ul>
+    </nav>
   </footer>
 </body>
 </html>
