Put the positio elements

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,48 +10,46 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
-        <img class="logo-img" src="images/brand.png" alt="Instagram logo" />
-        <div class="home-container beveled">
-          <img class="home-img" src="images/home.png" alt="Home icon" />
-          Log in
-        </div>
-      </div>
+      <div class="header-container"></div>
     </header>
     <main>
       <section>
-        <div>
+        <div class="phones-container">
           <img
-            class="phones-img"
+            id="phones-img"
             src="images/phones.png"
             alt="Phones with Instagram app"
           />
         </div>
       </section>
       <section>
-        <div class="info-container">
-          <h2>Capture and Share <br />the World's Moments</h2>
-          <div class="text-info-container">
-            <p>
-              Instagram is a <strong>fast</strong>, beautiful and fun way to
-              share your life with friends and family.
-            </p>
-            <p>
-              Take a picture or video, choose a filter to transform its look and
-              feel, then post to Instagram &mdash; it's that easy. You can even
-              share to Facebook, Twitter, Tumblr and more. It's a new way to see
-              the world.
-            </p>
-            <p>Oh yeah, did we mention it's free?</p>
+        <div class="main-container">
+          <img class="logo-img" src="images/brand.png" alt="Instagram logo" />
+          <div class="home-container beveled">
+            <img class="home-img" src="images/home.png" alt="Home icon" />
+            <h3>Log in</h3>
           </div>
-          <div>
+          <div class="info-container">
+            <h2>Capture and Share <br />the World's Moments</h2>
+            <div class="text-info-container">
+              <p>
+                Instagram is a <strong>fast</strong>, beautiful and fun way to
+                share your life with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
             <img
-              class="store-img"
               src="images/badge-iphone.png"
               alt="Apple Store logo"
             />
             <img
-              class="store-img"
+              id="store-android-img"
               src="images/badge-android.png"
               alt="Android Store logo"
             />
@@ -59,6 +57,7 @@
         </div>
       </section>
     </main>
+    <div class="clear-both"></div>
     <footer>
       <div class="footer-container">
         <ul>
