--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <title>Instagram</title>
     <meta charset="UTF-8" />
+    <link rel="styleshet" type="text/css" href="./css/reset.css" />
+    <link rel="styleshet" type="text/css" href="./css/main.css" />
   </head>
   <body>
     <header>
-      <img src="images/brand.png" alt="Instagram"/>
+      <img src="images/brand.png" alt="Instagram" />
       <a href="#" title="Log in">Log in</a>
     </header>
+    <aside>
+      <img src="images/phones.png" alt="Instagram phones" />
+    </aside>
     <main>
       <section>
         <h2>Capture and Share the World's Moments</h2>
 
         <p>
-          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
-          friends and family.
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+          share your life with friends and family.
         </p>
 
         <p>
@@ -27,18 +31,30 @@
 
         <p>Oh yeah, did we mention it's free?</p>
 
-        <a href="#" title="Download on the App Store"><img src="images/badge-iphone.png" alt="Download on the App Store" width="164" height="51" /></a>
-        <a href="#" title="Get it on Google Play"><img src="images/badge-android.png" alt="Get it on Google Play" width="153" height="51" /></a>
+        <a href="#" title="Download on the App Store"
+          ><img
+            src="images/badge-iphone.png"
+            alt="Download on the App Store"
+            width="164"
+            height="51"
+        /></a>
+        <a href="#" title="Get it on Google Play"
+          ><img
+            src="images/badge-android.png"
+            alt="Get it on Google Play"
+            width="153"
+            height="51"
+        /></a>
       </section>
     </main>
     <footer>
       <a href="#" title="About Us">About Us</a>
-      <a href="#" title="Support">Support</a> 
-      <a href="#" title="Blog">Blog</a> 
-      <a href="#" title="Press">Press</a> 
-      <a href="#" title="API">API</a> 
+      <a href="#" title="Support">Support</a>
+      <a href="#" title="Blog">Blog</a>
+      <a href="#" title="Press">Press</a>
+      <a href="#" title="API">API</a>
       <a href="#" title="Jobs">Jobs</a>
-      <a href="#" title="Privacy Terms">Privacy Terms</a> 
+      <a href="#" title="Privacy Terms">Privacy Terms</a>
       &copy; 2014 Instagram
     </footer>
   </body>
